# promptly

./: .gitignore  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  flake.nix  rust-toolchain.toml
.circleci/: config.yml
src/: layout.rs  main.rs  render.rs
